added persist redux and fake login

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
     "immer": "^9.0.2",
     "moment": "^2.29.1",
     "react": "^17.0.2",
@@ -14,6 +15,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
+    "redux-persist": "^6.0.0",
+    "slugify": "^1.5.1",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.1"
   },
